Fix footer overlap problem

--- a/app/assets/stylesheets/partials/_global.sass
+++ b/app/assets/stylesheets/partials/_global.sass
@@ -46,6 +46,7 @@ body
     margin-bottom: 1em
   .main-container
     padding-top: 2em
+    height: initial
 
 .normal-cursor-hover
   cursor: pointer
